[tool.poetry]
name = "graphene-asgi"
version = "0.1.0"
description = "graphene asgi adapter"
authors = ["Shen Li <dustet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
graphene = {version = "=3.0.dev20190817210753", allows-prereleases = true}

[tool.poetry.dev-dependencies]
uvicorn = "^0.8.6"
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
starlette = "^0.12.7"
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
